add todo implemented

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
   .container {
     @apply mx-auto max-w-[1200px] px-5;
   }
+  .customized_scrollbar {
+    @apply scrollbar-thin scrollbar-track-primary-50 scrollbar-thumb-primary-100;
+  }
 }
 
 *,
